--- a/section_4/code/cd_pipeline/Jenkinsfile
+++ b/section_4/code/cd_pipeline/Jenkinsfile
@@ -9,9 +9,18 @@ pipeline {
 
 	environment {
 		PYTHONPATH = "${WORKSPACE}/section_4/code/cd_pipeline"
+		PATH = "/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Library/Apple/usr/bin"
 	}
 
     stages {
+
+        stage("Print environment variables") {
+			steps {
+			    sh 'hostname'
+			    sh 'which python3'
+			    sh 'python3 --version'
+			    sh 'printenv' }
+		}
 
 		stage("Test - Unit tests") {
 			steps { runUnittests() }
@@ -69,7 +78,7 @@ def deploy(environment) {
 	if ("${environment}" == 'dev') {
 		containerName = "app_dev"
 		port = "8888"
-	} 
+	}
 	else if ("${environment}" == 'stage') {
 		containerName = "app_stage"
 		port = "88"
@@ -83,7 +92,7 @@ def deploy(environment) {
 		System.exit(0)
 	}
 
-	sh "docker ps -f name=${containerName} -q | xargs --no-run-if-empty docker stop"
+	sh "docker ps -f name=${containerName} -q | xargs docker stop"
 	sh "docker ps -a -f name=${containerName} -q | xargs -r docker rm"
 	sh "docker run -d -p ${port}:5000 --name ${containerName} hands-on-jenkins/myapp:${BUILD_NUMBER}"
 
